--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
 
 
 
-### Qt Stuff ###
+### Qt  ###
 set(CMAKE_PREFIX_PATH C:/Qt//5.12.6/mingw73_32)
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -22,35 +22,30 @@ set(CMAKE_AUTOMOC ON)
 set(QTPATH C:/Qt/5.12.6/mingw73_32/lib/cmake)
 find_package(Qt5 REQUIRED QUIET COMPONENTS Core Widgets HINTS ${QTPATH})
 
-### end Qt Stuff ###
+### end Qt  ###
 
+### CPR  ###
 set(ENV{CMAKE_USE_OPENSSL} OFF)
 set(ENV{BUILD_CPR_TESTS} OFF)
 set(ENV{USE_SYSTEM_CURL} OFF)
 
-
-
-
-
-if(Qt5Core_FOUND)
-    message(WARNING Qt5::Core)
-else()
-    message(WARNING Qt5::Core)
-endif()
-
 add_subdirectory(external/cpr)
-
-message(WARNING ${QT_LIBRARIES})
-
-add_definitions(-DCURL_STATICLIB)
+include_directories(${CPR_INCLUDE_DIRS})
+### end CPR ###
 
 
-add_executable(${EXECNAME_MAIN} main.cpp include/MainWindow.h src/MainWindow.cpp)
+include_directories(external)
 
+file(GLOB robot_HEAD "include/*.h")
+file(GLOB robot_SRC "src/*.cpp")
+
+
+add_executable(${EXECNAME_MAIN} main.cpp ${robot_HEAD} ${robot_SRC} external/json/json.hpp src/Robot.cpp include/Robot.h src/OccupancyGrid.cpp include/OccupancyGrid.h src/Cartographer.cpp include/Cartographer.h src/RobotTypes.cpp include/RobotTypes.h src/MapVisualizer.cpp include/MapVisualizer.h src/Perception.cpp include/Perception.h src/SonarModel.cpp include/SonarModel.h)
 
 include_directories(${CURL_INCLUDE_DIRS})
-target_link_libraries(${EXECNAME_MAIN} ${CURL_LIBRARIES} -lcurl )
 
+target_link_libraries(${EXECNAME_MAIN} ${CURL_LIBRARIES} -lcurl )
+target_link_libraries(${EXECNAME_MAIN} ${CPR_LIBRARIES})
 target_link_libraries(${EXECNAME_MAIN} Qt5::Core)
 target_link_libraries(${EXECNAME_MAIN} Qt5::Widgets)
 
